added in comments for sections through the html for code cleaning

--- a/funko-heroes.html
+++ b/funko-heroes.html
@@ -31,6 +31,8 @@
 		</header>
 
 	<div class = "multi-all">
+	
+	<!--NAVIGATION-->		
 		<section class = "product-nav">
 			<p>Pop! Figures</p>
 			<a href = "funko-heroes.html" class="nav-button"> Pop! Heroes </a>
@@ -46,7 +48,8 @@
 				<a href = "products.html" class="nav-button"> Sales </a>
 			</div>
 		</section>
-		
+
+	<!--REFINE-->		
 		<section class = "product-list">
 			<nav class = "breadcrumbs">
 				<a href ="index.html" class= "bc-home">Home</a> 
@@ -72,9 +75,9 @@
           		<a href="#"><img class = "search-button" src = "img/Products/search.png" alt="search button"></a>
           		</div>
           	</div>
-
 		</section>
 
+	<!--ITEM LISTING-->
 		<section class = "multi-list">
 			<div class = "item-box">
 				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/joy.png" alt="joy funko with box"></a>
@@ -155,7 +158,8 @@
 	       	</div>
 		</section>
 	</div>
-
+	
+	<!--FOOTER-->
 		<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
