--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 			</nav>
 		</header>
 
-		<section class = "banner">
-			<img src="img/Index/home-banner.jpg" alt="Home banner image that shows Funkos">
+	<!--BANNER-->
+		<section class = "banner home-banner">
+		<!-- <img src="img/Index/home-banner.jpg" alt="Home banner image that shows Funkos"> -->
 		</section>
 
+	<!--OFFERS/FEATURES-->
 		<section class = "features">
 			<h2>Offers</h2>
 			
@@ -61,6 +63,7 @@
 			</div>
 		</section>
 
+	<!--EVENTS-->
 		<section class = "events">
 			<h2>Upcoming Events</h2>
 			<div class= "events-all">
@@ -81,25 +84,25 @@
 			</div>
 		</section>
 
-	<section class = "footer">
-		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
-		  <div class = "email">
-		   <form id="comments" method="post" action="#">
-          <input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
-          </form>
-      </div>
+	<!--FOOTER-->
+		<section class = "footer">
+			<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
+		  	<div class = "email">
+		  		<form id="comments" method="post" action="#">
+          		<input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
+          		</form>
+      		</div>
 		
-		<div class ="footer-icons">
-			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
-			<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
-			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
-		</div>
+			<div class ="footer-icons">
+				<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
+				<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
+				<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
+			</div>
 
-		<div class = "extras">
-			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
-			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
-		</div>
+			<div class = "extras">
+				<a href = "reference.html"><p class = "extra-content"> Content </p></a>
+				<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
+			</div>
 		</section>
-
 	</body>
 </html>
