--- a/purchase-item.html
+++ b/purchase-item.html
@@ -32,7 +32,8 @@
 			</nav>
 		</header>
 
-<section class ="review">
+	<!--REIVEW ITEM BOX-->
+		<section class ="review">
 			<div class= "cart-all">
 				<div class= "cart">
 					<div class="item-wrapper">
@@ -68,12 +69,14 @@
 			</div>
 		</section>
 		
-
+	<!--INFORMATION INPUT-->
 		<section class="information">
 			<h3 class= "information-header item-header">Product Review</h3>
 			<div class ="information-input">
 			
 				<div class = "checkout-information">
+			
+			<!--SHIPPING INFORMATION-->
 					<div class="shipping">
 						<h4 class= "detail-header">Shipping Information</h4>
 				
@@ -126,7 +129,8 @@
 	          				</form>
 	      				</div>
 	    			</div>
-	  
+
+	  		<!--PAYMENT INFORMATION-->
 	  				<div class ="payment">
 	  					<h4 class= "detail-header">Payment Information</h4>
 		    			
@@ -174,6 +178,7 @@
 		</div>
 		</section>
 
+	<!--FOOTER-->
 		<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
