--- a/contact.html
+++ b/contact.html
@@ -42,40 +42,34 @@
 				<h4 class="banner-question"> Where to Find Us?</h4>
 			</div>
 		</section>
-<!--MAP/INFO-->
+
+	<!--STORE INFO-->
 		<section class = "contact-details">
 			<!--MAP-->
 			<div class="contact">
 				<h2>Funko Pop!</h2>
 				<div class="grid-col-one break">		
-					
-						<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2606.7138011639545!2d-123.14061979999994!3d49.20598860000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548674eaf81abf35%3A0x80101531f3f8010e!2s123+Granville+St%2C+Vancouver%2C+BC+V6P!5e0!3m2!1sen!2sca!4v1435783101846"></iframe>
+					<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2606.7138011639545!2d-123.14061979999994!3d49.20598860000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548674eaf81abf35%3A0x80101531f3f8010e!2s123+Granville+St%2C+Vancouver%2C+BC+V6P!5e0!3m2!1sen!2sca!4v1435783101846"></iframe>
 
 					<div class = "store-info">	
-					<div class ="store-details">
-					<p><a class = "bold-color">Location:</a>
-					<br>123 Granville Street, <br>Vancouver, BC <br>V6P 5A4</p>
-					</div>
+						<div class ="store-details">
+							<p><a class = "bold-color">Location:</a>
+							<br>123 Granville Street, <br>Vancouver, BC <br>V6P 5A4</p>
+						</div>
 
-					<div class ="store-details">
-					<p><a class = "bold-color">Email</a> vancouver@funkopop.com</p>
-				</div>
-				<div class ="store-details">
-					<p>
-					<a class = "bold-color">Phone Number</a>
-					+1 604 123 4466</p>
+						<div class ="store-details">
+							<p><a class = "bold-color">Email</a> vancouver@funkopop.com</p>
+						</div>
+					
+						<div class ="store-details">
+							<p><a class = "bold-color">Phone Number</a>+1 604 123 4466</p>
+						</div>
 					</div>
-					</div>
-
 				</div>
-
-			
-				<!--STORE INFO-->
-			
-				</div>
+			</div>
 		</section>
 			
-<!--FORM/CONTACT-->
+`<!--FORM/CONTACT-->
 		<section class = "contact-us">
 
 			<div class="center">
@@ -96,7 +90,7 @@
 			</div>
 		</section>
 
-		<!--FOOTER-->
+	<!--FOOTER-->
 		<section class = "footer">
 			<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 			<div class = "email">
@@ -116,7 +110,6 @@
 				<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
 			</div>
 		</section>
-<!--end of footer-->
 
 			
 	</body>
