--- a/events.html
+++ b/events.html
@@ -33,6 +33,7 @@
 			</nav>
 		</header>
 
+	<!--BANNER-->
 		<section class = "banner">
 			<img src="img/Events/event-banner.jpg" alt="banner image">
 			<div class = "banner-header">
@@ -69,9 +70,9 @@
 			</div>
 		</section>
 
-<!--FOOTER-->
+	<!--FOOTER-->
 		<section class = "footer">
-		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
+			<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 			<div class = "email">
 				<form id="comments" method="post" action="#">
 				<input class="comments" type="text" id="form-name" placeholder="Enter your email"> <a href ="#" class = "email-button">Submit</a>
