--- a/products.html
+++ b/products.html
@@ -31,9 +31,9 @@
 			</nav>
 		</header>
 
+	<!--NAVIGATION-->
 	<div class = "multi-all">
-<!-- 		<div id="mobile-menu">
-			</div> -->
+		<!--<div id="mobile-menu"></div> -->
 		<section class="product-nav">			
 			<p>Pop! Figures</p>
 			<a href = "funko-heroes.html" class="nav-button"> Pop! Heroes </a>
@@ -49,7 +49,8 @@
 				<a href = "products.html" class="nav-button"> Sales </a>
 			</div>
 		</section>
-		
+
+	<!--REFINE-->
 		<section class = "product-list">
 			<nav class = "breadcrumbs">
 				<a href ="index.html" class= "bc-home">Home</a> 
@@ -75,9 +76,9 @@
           		<a href="products.html"><img class = "search-button" src="img/Products/search.png" alt="search button"></a>
           		</div>
           	</div>
-
 		</section>
 
+	<!--ITEM LISTING-->
 		<section class = "multi-list">
 			<div class = "item-box">
 				<a href ="view-item.html"><img class="multi-item" src = "img/Products/Funko/joy.png" alt="joy funko with box"></a>
@@ -159,6 +160,7 @@
 		</section>
 	</div>
 
+	<!--FOOTER-->
 	<section class = "footer">
 		<img class="footer-img" src="img/funko.png" height="50" width="100" alt="funko logo">
 		  <div class = "email">
