- fixed banner header image - updated footer to have the repo link - made sure all links worked

--- a/events1.html
+++ b/events1.html
@@ -34,8 +34,8 @@
 			</nav>
 		</header>
 
-		<section class = "banner">
-			<img src="img/Events/events1-banner.jpg" alt="banner that shows a Funko display at an event">
+		<section class = "banner events1-banner">
+<!-- 			<img src="img/Events/events1-banner.jpg" alt="banner that shows a Funko display at an event">-->
 			<div class = "banner-header">
 				<h1> Van Fan Expo</h1>
 				<h4> What is that?</h4>
@@ -82,15 +82,16 @@
 			</form>
 	 	</div>
 		
-		<div class ="footer-icons">
-			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
-			<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
-			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
-		</div>
+			<div class ="footer-icons">
+				<a href = "index.html"><img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo"></a>
+				<a href = "index.html"><img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo"></a>
+				<a href = "index.html"><img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo"></a>
+			</div>
 
 		<div class = "extras">
 			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
 			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
+			<a href ="https://github.com/teerhc/iat339project2"> <p class = "extra-content"> Repository </p></a>
 		</div>
 	</section>
 
