--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
 			</nav>
 		</header>
 
-		<section class = "banner">
-			<img src="img/About/about-banner.jpg" alt="A banner image that shows a picture of the Funko mascot in the head office">
+		<section class = "banner about-banner">
+			<!-- <img src="img/About/about-banner.jpg" alt="A banner image that shows a picture of the Funko mascot in the head office"> -->
 			<div class = "banner-header">
 				<h1> About Us</h1>
 				<h4> Who Are We?</h4>
@@ -118,14 +118,15 @@
 	      	</div>
 		
 			<div class ="footer-icons">
-				<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
-				<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
-				<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
+				<a href = "index.html"><img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo"></a>
+				<a href = "index.html"><img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo"></a>
+				<a href = "index.html"><img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo"></a>
 			</div>
 
 			<div class = "extras">
-				<p class = "extra-content"> Content </p>
-				<p class = "extra-content"> Style Guide </p>
+			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
+			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
+			<a href ="https://github.com/teerhc/iat339project2"> <p class = "extra-content"> Repository </p></a>
 			</div>
 		</section>
 <!--end of footer-->
