--- a/events.html
+++ b/events.html
@@ -34,8 +34,8 @@
 		</header>
 
 	<!--BANNER-->
-		<section class = "banner">
-			<img src="img/Events/event-banner.jpg" alt="banner image">
+		<section class = "banner event-banner">
+<!-- 			<img src="img/Events/event-banner.jpg" alt="banner image"> -->
 			<div class = "banner-header">
 				<h1> Events</h1>
 				<h4> Where are We Going?</h4>
@@ -80,14 +80,15 @@
 			</div>
 		
 			<div class ="footer-icons">
-				<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
-				<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
-				<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
+				<a href = "index.html"><img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo"></a>
+				<a href = "index.html"><img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo"></a>
+				<a href = "index.html"><img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo"></a>
 			</div>
 
 			<div class = "extras">
 			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
 			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
+			<a href ="https://github.com/teerhc/iat339project2"> <p class = "extra-content"> Repository </p></a>
 			</div>
 		</section>
 <!--end of footer-->
