--- a/view-item.html
+++ b/view-item.html
@@ -122,15 +122,16 @@
           </form>
       </div>
 		
-		<div class ="footer-icons">
-			<img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo">
-			<img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo">
-			<img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo">
-		</div>
+			<div class ="footer-icons">
+				<a href = "index.html"><img src="img/Footer/facebook.png" height ="30" width="30" alt="Facebook logo"></a>
+				<a href = "index.html"><img src="img/Footer/twitter.png" height ="30" width="30" alt="Twitter logo"></a>
+				<a href = "index.html"><img src="img/Footer/instagram.png" height ="30" width="30" alt="Instagram logo"></a>
+			</div>
 
 		<div class = "extras">
 			<a href = "reference.html"><p class = "extra-content"> Content </p></a>
 			<a href ="styleguide.html"> <p class = "extra-content"> Style Guide </p></a>
+			<a href ="https://github.com/teerhc/iat339project2"> <p class = "extra-content"> Repository </p></a>
 		</div>
 		</section>
 	</body>
