fixed validation errors and firefox error on the height on the input box because it was hidden in that browser

--- a/purchase-item.html
+++ b/purchase-item.html
@@ -97,7 +97,7 @@
 					<div class="input-box">
 						<p class = "input-label">Name</P>
 						<form id="detail-name" method="post" action="#">
-		          		<input class="input-detail" type="text" name="name" placeholder="">
+		          		<input class="input-detail" type="text" placeholder="">
 		         		</form>
 	         		</div>
 				
